fix hydro wheel not working on safari

--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -362,7 +362,7 @@ $animation-timing = .3s
     transform rotate3d(0, 0, 0, 0deg)
 
   to
-    transform rotate3d(0, 0, 1, -360deg)
+    transform rotate3d(0, 0, 1, -180deg)
 
 @keyframes hydro-water
   from
